mobile buton fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -6074,7 +6074,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #148f77 !important;
+  background-color: #ff5e00 !important; 
 }
 
 .bg-secondary {
